--- a/style.css
+++ b/style.css
@@ -3,3 +3,70 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.5;
+}
+
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 13.5em;
+    background-color: teal;
+}
+
+.pageTitle {
+    position: relative;
+    color: white;
+    text-transform: uppercase;
+    font-weight: 100;
+    text-align: center;
+    margin: 1em;
+    font-size: 170%;
+}
+
+.profileImage {
+    position: relative;
+    display: block;
+    border-radius: 50%;
+    overflow: hidden;
+    width: 15em;
+    height: 15em;
+    margin: 0 auto;
+}
+
+.profileText {
+    text-align: center;
+}
+
+.chatIntro {
+    text-align: center;
+}
+
+.icon {
+    display: inline-block;
+    vertical-align: middle;
+    width: 1.5em;
+    height: 1.5em;
+}
+
+.icon img {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.socialContainer {
+    margin: 1em;
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+}
+
+.socialContainer a {
+    text-decoration: none;
+    color: black;
+}
