--- a/style.css
+++ b/style.css
@@ -7,12 +7,14 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.5;
+    text-align: center;    
 }
 
 body::before {
     content: "";
     position: absolute;
     top: 0;
+    left: 0;
     width: 100%;
     height: 13.5em;
     background-color: teal;
@@ -23,9 +25,39 @@ body::before {
     color: white;
     text-transform: uppercase;
     font-weight: 100;
-    text-align: center;
-    margin: 1em;
+    margin: 1em 0.5em 0.5em;
     font-size: 170%;
+}
+
+.name {
+    width: 80vw;
+    max-width: 30em;
+}
+
+.jobTitleContainer {
+    font-size: 150%;
+    color: white;
+    position: relative;
+    text-transform: uppercase;
+    margin-bottom: 2em;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.cursor {
+    animation: blink 1s infinite;
 }
 
 .profileImage {
@@ -35,15 +67,43 @@ body::before {
     overflow: hidden;
     width: 15em;
     height: 15em;
-    margin: 0 auto;
+    margin: 0 auto 3em;
+    border: solid 0.3em white;
 }
 
+.main {
+    max-width: 90em;
+    margin-left: auto;
+    margin-right: auto;
+}
 .profileText {
-    text-align: center;
+    margin-bottom: 3em;
 }
 
 .chatIntro {
-    text-align: center;
+    margin-bottom: 1em;
+}
+
+.chatBox {
+    margin-bottom: 1em;
+    display: block;
+    height: 50vh;
+    min-height: 20em;
+}
+
+.downloadContainer {
+    margin-bottom: 3em;
+}
+
+.btn-download {
+    padding: 0.5em 1em;
+    display: inline-block;
+    background-color: teal;
+    border-radius: 2px;
+    margin-left: 0.5em;
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
 }
 
 .icon {
@@ -60,13 +120,47 @@ body::before {
 }
 
 .socialContainer {
-    margin: 1em;
+    padding: 1em;
     display: flex;
     justify-content: space-around;
     list-style-type: none;
+    max-width: 40em;
+    margin: 0 auto;
 }
 
 .socialContainer a {
     text-decoration: none;
     color: black;
+}
+
+@media screen and (min-width: 30em) {
+    .chatBox {
+        width: 30em;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media screen and (min-width: 70em) {
+    .main {
+        display: flex;
+        text-align: left;
+    }
+
+    .profileText {
+        padding: 1em;
+        flex: 2;
+    }
+
+    .chatContainer {
+        flex: 1;        
+        padding: 1em;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .chatBox {
+        margin-left: 0;
+        width: 100%;
+    }
 }
