--- a/style.css
+++ b/style.css
@@ -2,165 +2,282 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-weight: 300;
+}
+
+:root {
+    --bgColor: #e6e6e6;
+    --bgColor--menu: #000;
+    --padding: 2rem;
+    --menuH: 10rem;
+    --btnHoverTextColor: var(--bgColor);
+    --btnBgColor: teal;   
+    --transitionDuration: 0.5s;
+}
+
+button,
+input {
+    -moz-appearance: none;
+    -ms-progress-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background: inherit;
+    color: inherit;
+    font-size: inherit;
+    border: none;
+}
+
+ul {
+    list-style-type: none;
+}
+
+li {
+    padding: 0.25em 0;
+}
+
+a {
+    text-decoration: none;
+    color: currentColor;
+}
+
+.mainMenu a {
+    height: 100%;
+}
+
+.underlineIn {
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+}
+
+.underlineIn::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 1px;
+    background-color: currentColor;
+    transition: transform var(--transitionDuration);
+    transform: translateX(-100%)
+}
+
+.underlineIn:hover::after {
+    transform: translateX(0);
+}
+
+.link {
+    color: inherit;
+    text-decoration: none;
+    text-shadow: -1px -1px 0 var(--bgColor), 
+        1px -1px 0 var(--bgColor), 
+        -1px 1px 0 var(--bgColor), 
+        1px 1px 0 var(--bgColor);
+    background-image: linear-gradient(to right, currentColor 0%, currentColor 100%);
+    background-repeat: repeat-x;
+    background-position: bottom 0.05em center;
+    background-size: 100% 0.05em;
+}
+
+svg {
+    width: 100%;
+    height: 100%;
+}
+
+img {
+    max-width: 100%;
+}
+
+.visuallyHidden {
+    position:absolute;
+    left:-10000px;
+    top:auto;
+    width:1px;
+    height:1px;
+    overflow:hidden;
+}
+
+.hide {
+    display: none;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    line-height: 1.5;
-    text-align: center;    
+    font-family: 'Source Sans Pro', sans-serif;
+    background-color: var(--bgColor--menu);
+    width: 100%;
+    min-height: 100vh;
+    font-weight: 300;
 }
 
-body::before {
+.icon {
+    width: 2rem;
+    height: 2rem;
+}
+
+.menuWrapper {
+    padding: var(--padding);
+    color: #fff;
+}
+
+.menuWrapper * {
+    font-weight: 600;    
+}
+
+.menuIcon {
+    position: absolute;
+    z-index: 20;
+    top: var(--padding);
+    right: var(--padding);
+}
+
+.menuInner {
+    display: flex;
+    padding-top: 1em;
+}
+
+.mainMenu {
+    flex: 1;
+}
+
+.social {
+    text-align: right;
+}
+
+.content {
+    background-color: var(--bgColor);
+    transition: all var(--transitionDuration);    
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    opacity: 0;
+    transition: opacity var(--transitionDuration);
+}
+
+.menuOpen .menuButton {
+    fill: #fff;
+}
+
+.menuOpen .overlay {
+    z-index: 10;
+    opacity: 1;
+}
+
+.menuOpen .content {
+    transform: scale(0.8) translateY(var(--menuH));
+}
+
+.headline {
+    font-size: 200%;
+    transform: translateY(calc(60vh - 100%));
+}
+
+.slide {
+    padding: var(--padding);    
+    background-color: var(--bgColor);    
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 100%;
+    transition: transform var(--transitionDuration);
+    transform: translateY(100%);
+}
+
+.slide.is-open {
+    transform: translateY(0);
+}
+
+.slideTitle,
+.slideTitle a {
+    font-weight: 600;
+    opacity: 0.6;
+    margin-bottom: 0.5em;
+    font-size: 2rem;
+}
+
+.portfolioItem {
+    font-size: 150%;
+}
+
+.portfolioItem::before {
+    content: "_ ";
+}
+
+.portfolioDate::before {
+    content: " / ";
+}
+
+.imageAndDatasheet {
+    position: relative;
+}
+
+.dataSheet {
+    position: absolute;
+    top: 2em;
+    left: 2em;
+    width: 40%;
+    background-color: rgba(0, 0, 0, 0.75);
+    border-radius: 2px;
+    color: #fff;
+}
+
+.dataSheet-title {
+    border-bottom: solid 1px #fff;
+    padding: 0.5em 1em;
+    font-size: 1.5rem;
+}
+
+.dataSheet-list {
+    list-style-type: square;
+    padding: 1em 2em;
+}
+
+.contact-social li {
+    display: inline-block;
+    margin: 1em 1em 1em 0;
+}
+
+.btn {
+    position: relative;
+    border: solid 1px currentColor;
+    border-radius: 1em;
+    padding: 0.25em 0.5em;
+    line-height: 1.5em;
+    overflow: hidden;
+}
+
+.btn::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 13.5em;
-    background-color: teal;
-}
-
-.pageTitle {
-    position: relative;
-    color: white;
-    text-transform: uppercase;
-    font-weight: 100;
-    margin: 1em 0.5em 0.5em;
-    font-size: 170%;
-}
-
-.name {
-    width: 80vw;
-    max-width: 30em;
-}
-
-.jobTitleContainer {
-    font-size: 150%;
-    color: white;
-    position: relative;
-    text-transform: uppercase;
-    margin-bottom: 2em;
-}
-
-@keyframes blink {
-    0% {
-        opacity: 1;
-    }
-
-    50% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-.cursor {
-    animation: blink 1s infinite;
-}
-
-.profileImage {
-    position: relative;
-    display: block;
-    border-radius: 50%;
-    overflow: hidden;
-    width: 15em;
-    height: 15em;
-    margin: 0 auto 3em;
-    border: solid 0.3em white;
-}
-
-.main {
-    max-width: 90em;
-    margin-left: auto;
-    margin-right: auto;
-}
-.profileText {
-    margin-bottom: 3em;
-}
-
-.chatIntro {
-    margin-bottom: 1em;
-}
-
-.chatBox {
-    margin-bottom: 1em;
-    display: block;
-    height: 50vh;
-    min-height: 20em;
-}
-
-.downloadContainer {
-    margin-bottom: 3em;
-}
-
-.btn-download {
-    padding: 0.5em 1em;
-    display: inline-block;
-    background-color: teal;
-    border-radius: 2px;
-    margin-left: 0.5em;
-    color: white;
-    text-transform: uppercase;
-    text-decoration: none;
-}
-
-.icon {
-    display: inline-block;
-    vertical-align: middle;
-    width: 1.5em;
-    height: 1.5em;
-}
-
-.icon img {
-    display: block;
-    width: 100%;
     height: 100%;
+    background-color: var(--btnBgColor);
+    transition: transform var(--transitionDuration);
+    transform: translateY(-100%);
 }
 
-.socialContainer {
-    padding: 1em;
-    display: flex;
-    justify-content: space-around;
-    list-style-type: none;
-    max-width: 40em;
-    margin: 0 auto;
+.btn a {
+    position: relative;
+    transition: color var(--transitionDuration);    
+}
+    
+.btn:hover a {
+    color: var(--btnHovertextColor);
 }
 
-.socialContainer a {
-    text-decoration: none;
-    color: black;
-}
-
-@media screen and (min-width: 30em) {
-    .chatBox {
-        width: 30em;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-
-@media screen and (min-width: 70em) {
-    .main {
-        display: flex;
-        text-align: left;
-    }
-
-    .profileText {
-        padding: 1em;
-        flex: 2;
-    }
-
-    .chatContainer {
-        flex: 1;        
-        padding: 1em;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .chatBox {
-        margin-left: 0;
-        width: 100%;
-    }
+.btn:hover::before {
+    transform: translateY(0);    
 }
