--- a/style.css
+++ b/style.css
@@ -109,12 +109,18 @@ p {
     display: none;
 }
 
+html,
+body,
+.content {
+    height: 100vh;
+}
+
 body {
     font-family: 'Source Sans Pro', sans-serif;
     font-display: swap;
     background-color: var(--bgColor--menu);
     width: 100%;
-    min-height: 100vh;
+    overflow: hidden;
     font-weight: 300;
 }
 
@@ -216,21 +222,26 @@ body {
     transform: scale(0.8) translateY(var(--menuH));
 }
 
+.menuOpen .slide {
+    overflow: hidden;
+}
+
 .headline {
     font-size: calc(2rem + 1vw);
     transform: translateY(calc(60vh - 100%));
 }
 
 .slide {
-    padding: var(--padding);    
+    padding: var(--padding) calc(var(--padding) + var(--menuIconWidth) + 1rem) var(--padding) var(--padding);    
     background-color: var(--bgColor);    
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    min-height: 100%;
+    height: 100%;
     transition: transform var(--transitionDuration);
     transform: translateY(100%);
+    overflow-y: scroll;
 }
 
 .slide.is-open {
