--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ html,
 body,
 .content {
     height: 100vh;
+    overflow: hidden;
 }
 
 body {
@@ -203,7 +204,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 .overlay {
@@ -211,7 +212,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: calc(100% + var(--menuH));
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
     opacity: 0;
     transition: opacity var(--transitionDuration);
@@ -240,16 +241,17 @@ body {
 }
 
 .slide {
-    padding: var(--padding) calc(var(--padding) + var(--menuIconWidth) + 1rem) var(--padding) var(--padding);    
+    padding: var(--padding) calc(var(--padding) + var(--menuIconWidth) + 1rem) calc(var(--padding) * 2) var(--padding);    
     background-color: var(--bgColor);    
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     transition: transform var(--transitionDuration);
     transform: translateY(100%);
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 
 .slide.is-open {
@@ -319,6 +321,10 @@ body {
     display: inline-block;
 }
 
+.contact-social {
+    text-align: left;
+}
+
 .contact-social li {
     display: inline-block;
     margin: 1em 1em 1em 0;
@@ -353,15 +359,21 @@ body {
         position: absolute;
         top: 0;
         left: 2rem;
-        width: 40%;
+        width: 70%;
+        max-width: 35em;
     }
 
-    .imageAndDatasheet img {
+    /* .imageAndDatasheet img {
         transition: filter var(--transitionDuration);
         filter: blur(5px);
     }
     
     .imageAndDatasheet img:hover {
         filter: none;
-    }    
+    }     */
+
+    .contact-social {
+        text-align: right;
+    }
+
 }
