--- a/style.css
+++ b/style.css
@@ -352,6 +352,11 @@ body {
     transform: scale(0.95);
 }
 
+#about ul {
+    list-style-type: square;
+    padding-left: 1em;
+}
+
 @media screen and (min-width: 40em) {
     
 
