--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ a {
         1px 1px 0 var(--bgColor);
     background-image: linear-gradient(to right, currentColor 0%, currentColor 100%);
     background-repeat: repeat-x;
-    background-position: bottom 0.05em center;
+    background-position: bottom 0.1em center;
     background-size: 100% 0.05em;
 }
 
@@ -135,6 +135,10 @@ body {
 
 body.font300Loaded.font600Loaded {
     font-family: 'Source Sans Pro', sans-serif;    
+}
+
+p + p {
+    margin-top: 0.5em;
 }
 
 .icon {
