chore: final ci script

--- a/src/index.liquid
+++ b/src/index.liquid
@@ -72,7 +72,7 @@
         <div class="overlay"></div>
         <div tabindex="-1" class="slide is-open" id="home">
             <h1 class="headline">I am a
-                <a class="link" href="#jsPortfolio">full stack JavaScript developer3</a>.
+                <a class="link" href="#jsPortfolio">full stack JavaScript developer</a>.
             </h1>
         </div>
 
