--- a/src/index.liquid
+++ b/src/index.liquid
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8">
+    <meta name="proxy" content="pippo">
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
     <script nomodule src="js/promises.min.js" type="text/javascript"></script>
     <script src="js/fontfaceobserver.js" type="text/javascript"></script>
